syntax = "proto3";

option go_package="./proto";

package proto;

service DestinationPlugin {
  rpc BatchUpsertUsers(BatchUpsertUsersRequest) returns (BatchUpsertUsersResponse);
  rpc BatchUpdateUsers(BatchUpdateUsersRequest) returns (BatchUpdateUsersResponse);
  rpc BatchDeleteUsers(BatchDeleteUsersRequest) returns (BatchDeleteUsersResponse);
}

message BatchUpsertUsersRequest {
  repeated User users = 1;
  bytes mappings = 2;
  bytes settings = 3;
}

message BatchUpsertUsersResponse {
  OperationStatus status = 1;
  repeated ResponseError errors = 2;
}

message BatchUpdateUsersRequest {
  repeated User users = 1;
  bytes mappings = 2;
  bytes settings = 3;
}

message BatchUpdateUsersResponse {
  OperationStatus status = 1;
  repeated ResponseError errors = 2;
}

message BatchDeleteUsersRequest {
  repeated string user_ids = 1;
  bytes settings = 2;
}

message BatchDeleteUsersResponse {
  OperationStatus status = 1;
  repeated ResponseError errors = 2;
}

message User {
  string id = 1;
  string full_name = 2;
  string first_name = 3;
  string last_name = 4;
  string email = 5;
  string phone = 6;
  // TODO: add additional fields
}

message ResponseError{
  string code = 1;
  string user_id = 2;
  string message = 3;
}

enum OperationStatus {
  SUCCESS = 0;
  PARTIAL_FAILURE = 1;
  TOTAL_FAILURE = 2;
}